# tagmanager

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Component_Specs.md  Design_Specs.md  Functional_Specs.md
pytaggit/: __init__.py  taggit.py
sample_folder/: sample_file.txt
taggit/: __init__.py  taggit.py
tagmanager/: __init__.py  tagmanager.py
tests/: test_taggit.py  test_taggit_macOS.py  test_tagmanager_macOS.py
